fix: address SonarCloud issues in ConflictsTui and PilotEngine
Extract resolveModule/mergeAndAdvance methods to reduce cognitive
complexity of startConflictCollection. Replace Collectors.toList()
with Stream.toList(). Remove unused progress parameter from
createConflictsPanel.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>